# event_tracking

./: .gitignore  README.md  access_google_calendar.py  pyproject.toml
development/: access_google_calendar.py  create_calendar_db.py  dashboard.py
development/eda/: 2025-04-17-fetching-calendar-events.ipynb  2025-04-22-explore-calendar-events.ipynb  2025-05-12-test-llm-with-events.ipynb  2025-05-13-langchain-concepts-notes.ipynb  2025-05-13-langchain-course-youtube.ipynb
docs/: event_tracking_whiteboard.excalidraw
event_tracking/: config.py
event_tracking/components/: calendar.py  dashboard.py  event_analyzer.py
tests/: test_calendar.py  test_dashboard.py
