[project]
name = "event-tracking"
version = "0.1.0"
description = "Event Tracking Project"
authors = [
    { name = "Stefano Pozzati", email = "pozz.ste@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "google>=3.0.0",
    "google-api-python-client>=2.167.0",
    "google-auth-oauthlib>=1.2.1",
    "jupyter>=1.1.1",
    "langchain>=0.0.27",
    "pandas>=2.0.3",
    "pytest>=8.3.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["event_tracking"]
