[project]
name = "event-tracking"
version = "0.1.0"
description = "Event Tracking Project"
authors = [
    { name = "Stefano Pozzati", email = "pozz.ste@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "dotenv>=0.9.9",
    "fastparquet>=2024.2.0",
    "google>=3.0.0",
    "google-api-python-client>=2.167.0",
    "google-auth-oauthlib>=1.2.1",
    "jupyter>=1.1.1",
    "langchain>=0.0.27",
    "langchain-community>=0.2.19",
    "langchain-experimental>=0.0.65",
    "langchain-openai>=0.1.25",
    "matplotlib>=3.7.5",
    "openai>=1.76.0",
    "pandas>=2.0.3",
    "plotly-express>=0.4.1",
    "pyarrow>=17.0.0",
    "pytest>=8.3.5",
    "seaborn>=0.13.2",
    "streamlit>=1.40.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["event_tracking"]
